--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
     <section id="sessionPanel" class="card" hidden>
       <div class="session-header">
         <h2 id="sessionTitle">Review for —</h2>
+        <div class="session-progress">
+          <span id="sessionProgress">Day 1 of 1</span>
+          <span id="sessionType" class="session-type-badge">Current</span>
+        </div>
         <div class="session-actions">
-          <button id="sessionStopBtn">Stop</button>
+          <button id="sessionStopBtn">Cancel</button>
           <button id="sessionNextDayBtn" class="primary" hidden>Next day ▶</button>
-          <button id="sessionFinishBtn" class="primary" hidden>Finish</button>
+          <button id="sessionFinishBtn" class="primary" hidden>Finish ✓</button>
         </div>
       </div>
       <div id="sessionLevels" class="levels-grid"></div>
@@ -56,7 +60,6 @@
   <footer class="app-footer">
     <div class="footer-actions">
       <button id="reviewBtn" class="primary" hidden>Start reviews</button>
-      <button id="backlogBtn" class="warning" hidden>Start backlog</button>
     </div>
   </footer>
 
@@ -113,6 +116,7 @@
       </div>
       <div class="right">
         <button class="markBtn primary">Mark done</button>
+        <button class="undoBtn" hidden>Undo</button>
         <span class="doneTag" hidden>Done</span>
       </div>
     </div>
